Fix: Cahnge background color for a better contrast withth e text color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 
 /* First section styling */
 .page {
-    background-color:rgb(14, 186, 238);
+    background-color:#9ddaec;
     height: 100vh;
     padding-top: 1px;
 }
@@ -79,7 +79,7 @@ h2 {
 }
 
 .box {
-    border: 2px solid rgb(14, 186, 238);
+    border: 2px solid #9ddaec;
     min-width: 100px;
     min-height: 100px;
     display: flex;
@@ -161,7 +161,7 @@ h2 {
 }
 #replay, #play, #home{
     background-color: hsl(208, 100%, 18%);
-    color: rgb(14, 186, 238);
+    color: #9ddaec;
     padding: 10px;    
     font-size: 20px;   
     cursor: pointer;
